[s2axis2]リファクタ →不要なクラスを削除。 →Javadocを修正。
git-svn-id: https://www.seasar.org/svn/s2axis/trunk@143 819c93ab-f40a-0410-9089-b01892e1e023